Added searchByid, update, delete, changed Contact as unique Column, changed the tests service and handler